# ffmpeg-sidecar

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-test.sh  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yml  mac-m1.yml  mac.yml  rust.yml  ubuntu.yml  windows.yml
examples/: audio_waveform.rs  download_ffmpeg.rs  download_ffmpeg_with_progress.rs  ffplay_preview.rs  ffprobe.rs  game_of_life.rs  h265_overlay.rs  h265_transcode.rs  hello_world.rs  metadata.rs  mic_meter.rs  named_pipes.rs  progress.rs  sockets.rs  tee.rs  terminal_video.rs  trigger.rs  whisper.rs
guides/: ffmpeg-v8-whisper.md
output/: .gitignore
scripts/: cargo-doc.sh  cargo-test.sh  ffmpeg.sh
src/: auto_download.rs  child.rs  comma_iter.rs  command.rs  download.rs  error.rs  event.rs  ffmpeg.rs  ffmpeg_time_duration.rs  ffprobe.rs  iter.rs  lib.rs  log_parser.rs  main.rs  metadata.rs  named_pipe.rs  named_pipes.rs  paths.rs  pix_fmt.rs  read_until_any.rs  stderr_parser.rs  test.rs  util.rs  version.rs
