[package]
name = "ffmpeg-sidecar"
version = "2.0.0-rc"
edition = "2021"
description = "Wrap a standalone FFmpeg binary in an intuitive Iterator interface."
authors = ["Nathan Babcock <nathan.r.babcock@gmail.com>"]
categories = ["multimedia"]
keywords = ["ffmpeg", "video"]
repository = "https://github.com/nathanbabcock/ffmpeg-sidecar"
readme = "README.md"
license = "MIT"

[features]
default = ["download_ffmpeg"]
download_ffmpeg = ["dep:reqwest", "dep:tar", "dep:xz2", "dep:zip"]
named_pipes = ["dep:winapi", "dep:nix"]

[lib]
crate-type = ["lib"]

[target.'cfg(target_os = "linux")'.dependencies]
tar = { version = "0.4.42", optional = true }
xz2 = { version = "0.1.7", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
zip = { version = "2.2.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", optional = true, features = [
  "winbase",
  "handleapi",
  "namedpipeapi",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", optional = true, features = [
  "fs"
] }

[dependencies]
anyhow = "1.0.79"
reqwest = { version = "0.12.8", optional = true, features = ["blocking"]}
