[package]
name = "ffmpeg-sidecar"
version = "2.0.6"
edition = "2021"
rust-version = "1.79"
description = "Wrap a standalone FFmpeg binary in an intuitive Iterator interface."
authors = ["Nathan Babcock <nathan.r.babcock@gmail.com>"]
categories = ["multimedia"]
keywords = ["ffmpeg", "video"]
repository = "https://github.com/nathanbabcock/ffmpeg-sidecar"
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.98"
ureq = { version = "3.0.12", optional = true }

[features]
default = ["download_ffmpeg"]
download_ffmpeg = ["dep:ureq", "dep:tar", "dep:xz2", "dep:zip"]
named_pipes = ["dep:winapi", "dep:nix"]

[target.'cfg(target_os = "linux")'.dependencies]
tar = { version = "0.4.44", optional = true }
xz2 = { version = "0.1.7", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
zip = { version = "4.3.0", optional = true, default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", optional = true, features = [
  "winbase",
  "handleapi",
  "namedpipeapi",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", optional = true, features = ["fs"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
